# luna_frontend

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  ENVFILES.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
docker/nginx/: Dockerfile.prod  nginx.conf
docker/web/: Dockerfile.dev  Dockerfile.prod  entrypoint.dev.sh  entrypoint.prod.sh
web/index/: models.py
web/templates/index/: index.css  index.html
web/web/: settings.py  urls.py
