[tool.poetry]
name = "luna_bot_frontend"
version = "0.1.0"
description = "Frontend for Luna Bot"
authors = ["Twylix <zemskov271@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
